--- a/leccion21-eg/index.html
+++ b/leccion21-eg/index.html
@@ -9,6 +9,116 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
   </head>
   <body>
-    <!-- ESCRIBE TU CÓDIGO AQUÍ -->
+    <header>
+      <div class="menu container">
+        <a href="#" class="text-uppercase link">Services</a>
+        <a href="#" class="text-uppercase link">Work</a>
+        <a href="#" class="text-uppercase link">The team</a>
+        <img src="assets/img/logo-r.png" class="logo" width="70">
+      </div>
+    </header>
+    <section id="home">
+      <div class="container">
+        <h2>YOU JUST FOUND AN UNTILMATE</h2>
+        <h1 class="text-uppercase text-home mb-0">we are applove from heart</h1>
+        <p class="text-uppercase mt-0">HANDCRAFTED - MODERN DESIGN -
+          PIXEL PERFECT - PASSIONED DESIGN
+        </p>
+        <a href="#services" class="btn-home">View services</a>
+      </div>
+    </section>
+    <section id="services">
+      <div class="container">
+        <h2 class="text-uppercase text-services mt-0">Services</h2>
+        <h4>
+          adhksdhkshkhskhfskhvjjkdhfjhsjfkhskhfkshfkhskaduy. Fuga hskhdksjdhks
+          djshhdjsjsottkmwe, iuern,n,dd sfiwnfksl oiqwqoenc kjifsnnc fjleufsnalf
+          shfkshfiuhf kfljsfhsb.
+        </h4>
+        <div class="box-services">
+          <img src="assets/img/website.png" alt="" width="200">
+          <h5 class="mb-0">USER INTERFACE DESIGN</h5>
+          <h6 class="m-0">Wireframing</h6>
+          <h6 class="m-0">Prototyping</h6>
+          <h6 class="m-0">Usability testing</h6>
+        </div>
+        <div class="box-services">
+          <img src="assets/img/img-1.png" alt="" width="200">
+          <h5 class="mb-0">CONCEPT AND IDEAS</h5>
+          <h6 class="m-0">Conceptualization</h6>
+          <h6 class="m-0">Digital Branding</h6>
+          <h6 class="m-0">Product Strategy</h6>
+        </div>
+        <div class="box-services">
+          <img src="assets/img/lapiz.png" alt="" width="200">
+          <h5 class="mb-0">DESING AND BRANDING</h5>
+          <h6 class="m-0">Interaction Design</h6>
+          <h6 class="m-0">Graphic Design</h6>
+          <h6 class="m-0">Identity Design</h6>
+        </div>
+      </div>
+    </section>
+    <section id="work">
+      <div class="container">
+        <h2 class="text-uppercase text-work mt-0">Work</h2>
+        <h4>dhshks hjfjlajsland sjfdjsbfjsfjsjfgj elit.
+          Fuga dsjjadbkksbk dahdka aakjdlajda. <br> esse sshfkshfkankm
+          fhhfkshkhskfhks sjfhaksdqkdnan dkhkd, shdkssdbskdbsd, adada.</h4>
+        <div class="work-img">
+          <img src="assets/img/hero.png" width="940">
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-1.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-2.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-3.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-4.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-5.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-6.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-12.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-8.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-9.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-10.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-11.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+        <div class="box-work">
+          <img src="assets/img/img-7.jpg" alt="" width="300">
+          <h4 class="text-uppercase">Nombre del proyecto</h4>
+        </div>
+      </div>
+    </section>
   </body>
+  <footer id="footer">
+    <p>© Copyright</p>
+  </footer>
 </html>
