--- a/leccion21-eg/index.html
+++ b/leccion21-eg/index.html
@@ -65,58 +65,67 @@
           Fuga dsjjadbkksbk dahdka aakjdlajda. <br> esse sshfkshfkankm
           fhhfkshkhskfhks sjfhaksdqkdnan dkhkd, shdkssdbskdbsd, adada.</h4>
         <div class="work-img">
-          <img src="assets/img/hero.png" width="940">
+          <img class="image" src="assets/img/hero.png" width="940">
         </div>
         <div class="box-work">
-          <img src="assets/img/img-1.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-1.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-2.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-2.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-3.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-3.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-4.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-4.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-5.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-5.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-6.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-6.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-12.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-12.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-8.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-8.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-9.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-9.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-10.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-10.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-11.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-11.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
         <div class="box-work">
-          <img src="assets/img/img-7.jpg" alt="" width="300">
+          <img class="image" src="assets/img/img-7.jpg" alt="" width="300">
           <h4 class="text-uppercase">Nombre del proyecto</h4>
         </div>
       </div>
     </section>
+
+    <!-- modal -->
+    <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <div>
+        <img id="imageZoom" alt="" style="width: 100%">
+      </div>
+    </div>
+    <script src="assets/js/main.js"></script>
   </body>
   <footer id="footer">
     <p>© Copyright</p>
